--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ footer {
 
   #search {
     width: 250px;
+    padding: 0 5%;
   }
 
   .lens {
@@ -198,6 +199,9 @@ footer {
     padding: 5%;
   }
 
+  .icons {
+    padding: 10px 0;
+  }
   button {
     font-size: 10px;
   }
